--- a/components/backend-tests-java-quarkus-sucydvuz/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-java-quarkus-sucydvuz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-java-quarkus-sucydvuz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-java-quarkus-sucydvuz:a471c3dd0269178505822ebf86cdad9ba16c46f0@sha256:25ea3c31b76437e10908ab0e2a17cf675516b4efb1ff41800c77d2a6e4a28743
+          name: container-image
